--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 .container {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   align-items: center;
   justify-content: center;
 }
