--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -1,77 +1,62 @@
- /* @media screen and (min-width: 300px) and (max-width: 570px) {
- 
-  .container {
-    display: block !important;
-  }
+@media screen and (max-width: 1200px) {
   #leftBox {
-    width: unset !important;
-    padding: 0;
-    margin: 0;
-  }
-
-  .noteBox {
-    width: unset;
-  }
-  #textDisplay {
-    justify-content: center !important;
-  }
-  #rightBox {
-    width: unset !important;
-    padding: 0;
-    margin: 0;
+    padding: 0 3rem;
   }
 }
-
-@media screen and (min-width: 760px) and (max-width: 990px) {
-  #rightBox {
-    width: unset !important;
-    padding: 0;
-    margin: 0;
-  }
-  .noteBox {
-    width: unset;
-  }
-  #leftBox {
-    width: unset;
-    padding: 0;
-    margin: 0;
-  }
-}  */
-  @media screen and (max-width: 1200px) {
-
-    #leftBox {
-     
-      padding: 0 3rem;
-  }
-  .picker{
-    height: 2rem  !important;
+@media screen and (max-width: 1200px) {
+  .picker {
+    height: 2rem !important;
     width: 3rem !important;
   }
   .color-head h3 {
     font-size: 19px !important;
-}
-#noteText{
-
-width: 15rem !important;
-height: 10rem !important;
-}
-
   }
-  @media screen and (max-width: 800px) {
-    #noteText{
+  #noteText {
+    width: 15rem !important;
+    height: 10rem !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  #leftBox {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 800px) {
+  #noteText {
     width: 17rem !important;
     height: 10rem !important;
-    }
- 
   }
-  @media screen and (max-width: 600px){
-    #leftBox{
-      width: 100% !important;
-    }
-    .container{
-      flex-direction: column;
-    }
-    #rightBox{
-      width: 100% !important;
-    }
+}
+@media screen and (max-width: 700px) {
+  #leftBox {
+    width: 100% !important;
   }
+  .container {
+    flex-direction: column;
+  }
+  #rightBox {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 900px) {
+  #leftBox {
+    width: 100% !important;
+  }
+  #btn {
+    padding: 0.4rem 1rem !important;
+  }
+  #rightBox {
+    width: 100% !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #noteText {
+    width: 10rem !important ;
+    height: 6rem !important;
+  }
+  #rightBox {
+    padding: 0 1rem;
+  }
+}
+
