--- a/style.css
+++ b/style.css
@@ -37,14 +37,14 @@ body {
   width: 50%;
   background-color: antiquewhite;
   height: 100%;
-  /* margin: auto; */
+  padding: 0 1rem;
   text-align: center;
   background-image: url("https://cdn.pixabay.com/photo/2017/07/28/14/10/background-2548758_1280.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .text-flex {
   display: flex;
@@ -56,8 +56,8 @@ body {
   flex-wrap: wrap;
 }
 .noteBox {
-  height: 170px;
-  width: 200px;
+  min-width: 5rem;
+  min-height: 3rem;
   border-radius: 10px;
   font-size: 25px;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.717);
@@ -117,6 +117,7 @@ body {
   text-shadow: 2px 2px 8px #f6c18f;
   font-family: "Poppins", sans-serif;
   padding: .5rem 2rem;
+  margin-left: -5rem;
 }
 h1 {
   color: #8a632c;
