--- a/style.css
+++ b/style.css
@@ -3,152 +3,117 @@
   padding: 0;
   margin: 0;
 }
-body {
+.container {
+  width: 100%;
   display: flex;
+  justify-content: center;
   height: 100vh;
 }
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-.color-head h3 {
-  font-size: 25px;
-}
-::placeholder {
-  color: #fff;
-}
 #leftBox {
+  background-image: url("https://cdn.pixabay.com/photo/2017/09/05/22/58/background-2719560_1280.jpg");
+  width: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* padding: 0 3rem; */
-  background-image: url("https://cdn.pixabay.com/photo/2017/09/05/22/58/background-2719560_1280.jpg");
-  width: 50%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   align-items: center;
+  gap: 2rem 0;
 }
 
 #rightBox {
-  width: 50%;
-  background-color: antiquewhite;
-  height: 100%;
-  padding: 0 1rem;
-  text-align: center;
   background-image: url("https://cdn.pixabay.com/photo/2017/07/28/14/10/background-2548758_1280.jpg");
-  background-repeat: no-repeat;
+  width: 50%;
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  padding: 2rem;
   overflow-y: scroll;
+}
+#noteText {
+  background: linear-gradient(#ff45006b, #00000073);
+  height: 10rem;
+  width: 20rem;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  padding: 0 .5rem;
+}
+
+::placeholder {
+  color: #fff;
+  font-size: 2rem;
 }
 .text-flex {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 0 2rem;
+}
+#btn {
+  padding: 0.4rem 1.5rem;
+  border-radius: 1.5rem;
+  border: none;
+  background-color: #ec412793;
+  box-shadow: 2px 2px 4px #a1783c;
+  color: #fff;
+  font-size: 1.5rem;
+  width: 8rem;
+  margin-left: -6rem;
+}
+.text-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.colors {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem 0;
 }
 #textDisplay {
   display: flex;
+  align-items: center;
+  justify-content: left;
   flex-wrap: wrap;
+  gap: 2rem;
+  padding-top: 2rem;
 }
 .noteBox {
-  min-width: 5rem;
-  min-height: 3rem;
-  border-radius: 10px;
-  font-size: 25px;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.717);
-  border: none;
-  overflow: auto;
-}
-.color-head{
-  margin-left: 2rem;
-}
-
-.noteBox {
-  padding: 10px;
-  margin: 5px;
-  border: 1px solid #ddd;
-  color: white;
+  min-width: 7.7rem;
+  height: 5rem;
+  max-width: 12rem;
+  padding: 1rem;
+  border-radius: 0.7rem;
   position: relative;
   text-align: left;
+  font-size: 1.5rem;
+  background-color: #ffffff;
+  color: #000000;
+  overflow: hidden scroll;
 }
-#noteText {
-  height: 16rem;
-  width: 27rem;
-  box-shadow: 2px 2px 4px #ddd3ef;
-  border-radius: 10px;
-  border: none;
-  background: linear-gradient(#ff45006b, #00000073);
-  color: white;
-  font-size: 20px;
-  font-family: "Poppins", sans-serif;
-  padding: 5px 0 0 10px;
-}
-.picker {
-  height: 50px;
-  width: 80px;
-  border: none;
-  background: linear-gradient(rgba(0, 0, 0, 0.21), rgba(0, 0, 0, 0.279));
-}
-#textColor {
-  background: linear-gradient(
-    rgba(214, 107, 107, 0.721),
-    rgba(26, 8, 8, 0.699)
-  );
-}
-.text-flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#btn {
-  display: inline-block;
-  border-radius: 20px;
-  background-color: #ec412793;
-  box-shadow: 2px 2px 4px #a1783c;
-  border: none;
-  margin-top: 1rem;
-  color: white;
-  font-size: 20px;
-  text-shadow: 2px 2px 8px #f6c18f;
-  font-family: "Poppins", sans-serif;
-  padding: .5rem 2rem;
-  margin-left: -5rem;
-}
-h1 {
-  color: #8a632c;
-  padding: 1rem;
-}
-.placeholder {
-  color: white !important;
-  font-weight: bold !important;
-}
-.closeBtn {
-  color: white;
-  border-radius: 10px;
-  font-size: 35px;
-  cursor: pointer;
-  position: absolute;
-  right: 11px;
-  top: -7px;
-}
-
-#rightBox::-webkit-scrollbar,
 .noteBox::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
+  height: 6px;
 }
 
-#rightBox::-webkit-scrollbar-thumb,
 .noteBox::-webkit-scrollbar-thumb {
-  background-color: #888888c0;
+  background-color: #888;
+  border-radius: 0 10px 10px 0;
 }
 
-#rightBox::-webkit-scrollbar-track,
 .noteBox::-webkit-scrollbar-track {
   background-color: #f1f1f1;
   border-radius: 0 10px 10px 0;
+}
+.closeBtn {
+  color: white;
+  border-radius: 0.6rem;
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  right: 8px;
+  top: -13px;
 }
